cmake_minimum_required(VERSION 3.10)
project(ANSII_C_training C)

set(CMAKE_C_STANDARD 99)

add_executable(ANSII_C_training main.c cwiczenie11.c cwiczenie12.c cwiczenie13.c cwiczenie14.c cwiczenie16.c cwiczenie15.c cwiczenie17.c cwiczenie18.c cwiczenie19.c cwiczenie110.c cwiczenie111.c cwiczenie112.c)